# learn_zero2prod

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-chef  Dockerfile.old  README.md  configuration.yaml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: audit.yml  rust.yml
.sqlx/: query-097b04c9d03c8191f0239328dd0e1c6560d4e945b0da8ae9bf1fd659361bc5ab.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230302172201_create_subscriptions_table.sql  20240223163830_add_status_to_subscriptions.sql  20240223164725_make_subscription_status_not_null.sql  20240223165331_create_subscription_tokens_table.sql  20240818211107_create_users_table.sql  20240821065539_rename_password_column.sql  20240821074710_add_salt_to_users.sql  20240821210452_remove_salt_from_users.sql  20250114073108_seed_user.sql  20250430215120_create_idempotency_table.sql  20250504125758_relax_null_checks_on_idempotency.sql  20250507151127_create_newsletter_issues_table.sql  20250507155003_create_issue_delivery_queue_table.sql
scripts/: init_db.ps1  init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  error.rs  idempotency.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs  logout.rs  mod.rs  newsletters.html  newsletters.rs
src/routes/admin/password/: change_password_form.html  get.rs  post.rs
src/routes/login/: login.html  mod.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
