[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4", "macro-diagnostics"] }
validator = "0.16"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1.18"
claim = "0.5"
fake = "2.8"
quickcheck = "1"
quickcheck_macros = "1"
wiremock = "0.5"
